<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_activity_frame"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rishucuber.armywelfare.initactivities.ForgotPasswordActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_otplabel"
            style="@style/ForgotTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword_label"

            />

        <EditText
            android:id="@+id/et_contact"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_passwordtextview"
            android:hint="@string/forgotpassword_contacthint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/bt_continue"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword_bttext"
            android:layout_marginTop="20sp"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"

            android:visibility="gone" />


    </LinearLayout>
    <FrameLayout
        android:id="@+id/dialogue_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"


        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:alpha=".3"
            />
        <TextView
            android:id="@+id/dialogue"
            style="@style/ForgotTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A Reset Password Request has been sent to your Email Please follow the instructions."
            android:layout_gravity="center"
            android:textSize="30dp"


            />
        <Button
            android:id="@+id/bt_login_intent"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Click To Login"
            android:layout_gravity="bottom"
            android:textSize="20dp"
            android:layout_marginBottom="100dp"

            />

    </FrameLayout>

</FrameLayout>
